--- a/src/w4/assignment/w4.html
+++ b/src/w4/assignment/w4.html
@@ -88,12 +88,6 @@
         padding-block: 4px;
       }
     </style>
-    <style type="text/css">
-      .line {
-        border-bottom: 2px solid #b1ada8;
-      }
-    </style>
-    <!-- 출처: https://18281818.tistory.com/88 [반이라도 이해하자:티스토리] -->
   </head>
   <body>
     <div class="container">
@@ -167,11 +161,17 @@
       <p style="padding-bottom: 12px; font-size: 14px; font-weight: 400">
         4인분 기준
       </p>
-      <table border="0">
+      <table>
         <tr>
-          <td class="line" style="padding-bottom: 6px">수량</td>
-          <td class="line" style="padding-bottom: 6px">단위</td>
-          <td class="line" style="padding-bottom: 6px">품목</td>
+          <td style="padding-bottom: 6px; border-bottom: 2px solid #b1ada8">
+            수량
+          </td>
+          <td style="padding-bottom: 6px; border-bottom: 2px solid #b1ada8">
+            단위
+          </td>
+          <td style="padding-bottom: 6px; border-bottom: 2px solid #b1ada8">
+            품목
+          </td>
         </tr>
         <tr>
           <td style="text-align: right; padding-top: 8px">3</td>
