--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <a href="./src/w4/assignment/w4_parctice.html">4주차 과제_자습</a>
       </li>
       <li><a href="./src/w5/index.html">5주차</a></li>
+      <li><a href="./src/w6/src/card/card.html">6주차</a></li>
     </ol>
   </body>
 </html>
