--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       </li>
       <li><a href="./src/w5/index.html">5주차</a></li>
       <li><a href="./src/w6/src/card/card.html">6주차</a></li>
+      <li><a href="./src/w7/index.html">7주차</a></li>
     </ol>
   </body>
 </html>
