--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <li><a href="./src/w5/index.html">5주차</a></li>
       <li><a href="./src/w6/src/card/card.html">6주차</a></li>
       <li><a href="./src/w7/index.html">7주차</a></li>
+      <li><a href="./src/w7/assignment/index.html">7주차_과제</a></li>
     </ol>
   </body>
 </html>
