--- a/src/w7/assignment/index.html
+++ b/src/w7/assignment/index.html
@@ -32,7 +32,7 @@
         <div class="section_help">How can we help?</div>
         <div class="section_search">
           <ul class="search_list">
-            <li>search</li>
+            <li class="search_color">search</li>
           </ul>
           <ul class="search_list">
             <li class="arrow">
