--- a/src/w7/index.html
+++ b/src/w7/index.html
@@ -8,6 +8,7 @@
   <body>
     <ol>
       <li><a href="./step1_flex/step1.html">step1_flex</a></li>
+      <li><a href="./assignmentDemo/index.html">step1_flex</a></li>
     </ol>
   </body>
 </html>
