--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
       <li><a href="./src/w6/src/card/card.html">6주차</a></li>
       <li><a href="./src/w7/index.html">7주차</a></li>
       <li><a href="./src/w7/assignment/index.html">7주차_과제</a></li>
+      <li><a href="./src/w8/assignmentDemo/index.html">8주차_과제_풀이</a></li>
+      <li><a href="./src/w9/index.html">9주차</a></li>
+      <li><a href="./src/w10/index.html">10주차</a></li>
     </ol>
   </body>
 </html>
