--- a/src/w10/assignment/index.html
+++ b/src/w10/assignment/index.html
@@ -90,7 +90,37 @@
     <div class="Main">
       <div class="section section__main">
         <div class="container container__main">
-          <div class="sidebar"></div>
+          <div class="sidebar">
+            <div class="sidebar sidebar__all">
+              <div class="sidebar__all search">
+                <svg
+                  width="20"
+                  height="20"
+                  viewBox="0 0 20 20"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="pointer-events-none absolute left-3 top-[42px]"
+                >
+                  <title>Search</title>
+                  <path
+                    d="M8.33333 13.6667C11.555 13.6667 14.1667 11.055 14.1667 7.83333C14.1667 4.61167 11.555 2 8.33333 2C5.11167 2 2.5 4.61167 2.5 7.83333C2.5 11.055 5.11167 13.6667 8.33333 13.6667Z"
+                    stroke="currentColor"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  ></path>
+                  <path
+                    d="M17.5 17L12.5 12"
+                    stroke="currentColor"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  ></path>
+                </svg>
+                <input class="search__box" type="search" placeholder="Search" />
+              </div>
+            </div>
+          </div>
           <div class="main"></div>
         </div>
       </div>
