--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <li><a href="./src/w8/assignmentDemo/index.html">8주차_과제_풀이</a></li>
       <li><a href="./src/w9/index.html">9주차</a></li>
       <li><a href="./src/w10/index.html">10주차</a></li>
+      <li><a href="./src/w11/index.html">11주차</a></li>
     </ol>
   </body>
 </html>
