--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <body>
     <h1>WMD241-최지이-202220398</h1>
     <ol>
+      <li>
+        <a href="./src/Frontend_Practice/index.html">Frontend Practice</a>
+      </li>
       <li><a href="./src/w2/index.html">2주차</a></li>
       <li><a href="./src/w3/index.html">3주차</a></li>
       <li><a href="./src/w4/index.html">4주차</a></li>
@@ -24,6 +27,8 @@
       <li><a href="./src/w9/index.html">9주차</a></li>
       <li><a href="./src/w10/index.html">10주차</a></li>
       <li><a href="./src/w11/index.html">11주차</a></li>
+      <li><a href="./src/w12/index.html">12주차</a></li>
+      <li><a href="./src/w13/index.html">13주차</a></li>
     </ol>
   </body>
 </html>
