--- a/src/Frontend_Practice/lv_1/index.html
+++ b/src/Frontend_Practice/lv_1/index.html
@@ -7,27 +7,90 @@
     <link rel="stylesheet" href="./style/style.css" />
   </head>
   <body>
-    <img class="fixed fixed--pos-tl fixed--role--logo" src="./asset/logo.png" />
-    <a class="fixed fixed--pos-tr fixed--role--contact" href="#"
+    <img class="fixed fixed--pos-tl fixed--role-logo" src="./asset/logo.png" />
+    <a class="fixed fixed--pos-tr fixed--role-contact" href="#"
       >info@backstagetalks.com</a
     >
-    <ol class="fixed fixed--pos-br fixed--role--list">
+    <ol class="fixed fixed--pos-br fixed--role-list">
       <li>
         <a href="#issue-1">Issue #1</a>
-        <a href="#issue-2">Issue #2</a><a href="#issue-3">Issue #3</a>
-        <a href="#issue-4">Issue #4</a><a href="#issue-5">Issue #5</a>
+      </li>
+      <li>
+        <a href="#issue-2">Issue #2</a>
+      </li>
+      <li>
+        <a href="#issue-3">Issue #3</a>
+      </li>
+      <li>
+        <a href="#issue-4">Issue #4</a>
+      </li>
+      <li>
+        <a href="#issue-5">Issue #5</a>
+      </li>
+      <li>
         <a href="#issue-6">Issue #6</a>
+      </li>
+      <li>
         <a href="#issue-7">Issue #7</a>
       </li>
     </ol>
-    <div class="fixed fixed--pos-bl fixed--role--about">
+    <div class="fixed fixed--pos-bl fixed--role-about">
       <p class="fixed__desc">
         'Backstage Talks is a magazine of casual, but in depth dialogues on
         design and business. Our decisions shape and influence this complex
         world—to have a chance to make the right ones, we need to talk.
       </p>
-      <p class="fixed__">© 2024 <a href="#">Published by Büro</a></p>
-      <a href="#">Milk Privacy Policy</a>
+      <p class="fixed__copyright">© 2024 <a href="#">Published by Büro</a></p>
+      <a class="fixed__policy" href="#">Privacy Policy</a>
+    </div>
+    <div id="issue-1" class="issue issue--no1">
+      <img src="./asset/btn (1).png" alt="" class="issue__img" />
+      <div class="issue__text">
+        <p class="issue__title">issue #1</p>
+        <p class="issue__link">buy here</p>
+      </div>
+    </div>
+    <div id="issue-2" class="issue issue--no2">
+      <img src="./asset/btn (2).png" alt="" class="issue__img" />
+      <div class="issue__text">
+        <p class="issue__title">issue #2</p>
+        <p class="issue__link">buy here</p>
+      </div>
+    </div>
+    <div id="issue-3" class="issue issue--no3">
+      <img src="./asset/btn (3).png" alt="" class="issue__img" />
+      <div class="issue__text">
+        <p class="issue__title">issue #3</p>
+        <p class="issue__link">buy here</p>
+      </div>
+    </div>
+    <div id="issue-4" class="issue issue--no4">
+      <img src="./asset/btn (4).png" alt="" class="issue__img" />
+      <div class="issue__text">
+        <p class="issue__title">issue #4</p>
+        <p class="issue__link">buy here</p>
+      </div>
+    </div>
+    <div id="issue-5" class="issue issue--no5">
+      <img src="./asset/btn (5).png" alt="" class="issue__img" />
+      <div class="issue__text">
+        <p class="issue__title">issue #5</p>
+        <p class="issue__link">buy here</p>
+      </div>
+    </div>
+    <div id="issue-6" class="issue issue--no6">
+      <img src="./asset/btn (6).png" alt="" class="issue__img" />
+      <div class="issue__text">
+        <p class="issue__title">issue #6</p>
+        <p class="issue__link">buy here</p>
+      </div>
+    </div>
+    <div id="issue-7" class="issue issue--no7">
+      <img src="./asset/btn (7).png" alt="" class="issue__img" />
+      <div class="issue__text">
+        <p class="issue__title">issue #7</p>
+        <p class="issue__link">buy here</p>
+      </div>
     </div>
   </body>
 </html>
