--- a/src/Frontend_Practice/lv_1/index.html
+++ b/src/Frontend_Practice/lv_1/index.html
@@ -43,53 +43,67 @@
       <p class="fixed__copyright">© 2024 <a href="#">Published by Büro</a></p>
       <a class="fixed__policy" href="#">Privacy Policy</a>
     </div>
-    <div id="issue-1" class="issue issue--no1">
-      <img src="./asset/btn (1).png" alt="" class="issue__img" />
-      <div class="issue__text">
-        <p class="issue__title">issue #1</p>
-        <p class="issue__link">buy here</p>
+    <div class="wrapper">
+      <div id="issue-1" class="issue issue--no1">
+        <img src="./asset/btn (1).png" alt="" class="issue__img" />
+        <div class="issue__text">
+          <p class="issue__title">issue #1</p>
+          <p class="issue__link">buy here</p>
+        </div>
+      </div>
+      <div id="issue-2" class="issue issue--no2">
+        <img src="./asset/btn (2).png" alt="" class="issue__img" />
+        <div class="issue__text">
+          <p class="issue__title">issue #2</p>
+          <p class="issue__link">buy here</p>
+        </div>
+      </div>
+      <div id="issue-3" class="issue issue--no3">
+        <img src="./asset/btn (3).png" alt="" class="issue__img" />
+        <div class="issue__text">
+          <p class="issue__title">issue #3</p>
+          <p class="issue__link">buy here</p>
+        </div>
+      </div>
+      <div id="issue-4" class="issue issue--no4">
+        <img src="./asset/btn (4).png" alt="" class="issue__img" />
+        <div class="issue__text">
+          <p class="issue__title">issue #4</p>
+          <p class="issue__link">buy here</p>
+        </div>
+      </div>
+      <div id="issue-5" class="issue issue--no5">
+        <img src="./asset/btn (5).png" alt="" class="issue__img" />
+        <div class="issue__text">
+          <p class="issue__title">issue #5</p>
+          <p class="issue__link">buy here</p>
+        </div>
+      </div>
+      <div id="issue-6" class="issue issue--no6">
+        <img src="./asset/btn (6).png" alt="" class="issue__img" />
+        <div class="issue__text">
+          <p class="issue__title">issue #6</p>
+          <p class="issue__link">buy here</p>
+        </div>
+      </div>
+      <div id="issue-7" class="issue issue--no7">
+        <img src="./asset/btn (7).png" alt="" class="issue__img" />
+        <div class="issue__text">
+          <p class="issue__title">issue #7</p>
+          <p class="issue__link">buy here</p>
+        </div>
       </div>
     </div>
-    <div id="issue-2" class="issue issue--no2">
-      <img src="./asset/btn (2).png" alt="" class="issue__img" />
-      <div class="issue__text">
-        <p class="issue__title">issue #2</p>
-        <p class="issue__link">buy here</p>
-      </div>
-    </div>
-    <div id="issue-3" class="issue issue--no3">
-      <img src="./asset/btn (3).png" alt="" class="issue__img" />
-      <div class="issue__text">
-        <p class="issue__title">issue #3</p>
-        <p class="issue__link">buy here</p>
-      </div>
-    </div>
-    <div id="issue-4" class="issue issue--no4">
-      <img src="./asset/btn (4).png" alt="" class="issue__img" />
-      <div class="issue__text">
-        <p class="issue__title">issue #4</p>
-        <p class="issue__link">buy here</p>
-      </div>
-    </div>
-    <div id="issue-5" class="issue issue--no5">
-      <img src="./asset/btn (5).png" alt="" class="issue__img" />
-      <div class="issue__text">
-        <p class="issue__title">issue #5</p>
-        <p class="issue__link">buy here</p>
-      </div>
-    </div>
-    <div id="issue-6" class="issue issue--no6">
-      <img src="./asset/btn (6).png" alt="" class="issue__img" />
-      <div class="issue__text">
-        <p class="issue__title">issue #6</p>
-        <p class="issue__link">buy here</p>
-      </div>
-    </div>
-    <div id="issue-7" class="issue issue--no7">
-      <img src="./asset/btn (7).png" alt="" class="issue__img" />
-      <div class="issue__text">
-        <p class="issue__title">issue #7</p>
-        <p class="issue__link">buy here</p>
+    <div class="footer">
+      <a class="footer__contact" href="#">info@backstagetalks.com</a>
+      <div class="footer__about">
+        <p class="fixed__desc">
+          'Backstage Talks is a magazine of casual, but in depth dialogues on
+          design and business. Our decisions shape and influence this complex
+          world—to have a chance to make the right ones, we need to talk.
+        </p>
+        <p class="fixed__copyright">© 2024 <a href="#">Published by Büro</a></p>
+        <a class="fixed__policy" href="#">Privacy Policy</a>
       </div>
     </div>
   </body>
